:pencil2: Small typo fix
Contributng -> Contributing

--- a/web/docs/index.ejs
+++ b/web/docs/index.ejs
@@ -98,7 +98,7 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon fa fa-heartbeat"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Contributng</h3>
+                            <h3 class="title">Contributing</h3>
                             <p class="intro">Bread tastes better with friends.</p>
                             <a class="link" href="contribute"><span></span></a>
                         </div><!--//item-inner-->
