--- a/web/docs/blocks/install/troubleshoot.ejs
+++ b/web/docs/blocks/install/troubleshoot.ejs
@@ -1,5 +1,4 @@
 <div class="section-block">
-<p><b>Warning</b> : Shinobi is not for the faint of heart. Currently it is still in heavy development. While the  large objective is to actually care about the software while writing it : this project started in November 2016, it should be expected to have bugs and the need for further refinement. If you are unable to get through the installation process please skip Shinobi and try Blue Iris.</p>
 <h2>What to do</h2>
 <p>For all errors please try the following before posting in the <a href="<%=config.issuesPage%>">Issues</a> or asking on <a href="<%=config.slackInvite%>">Discord</a>.</p>
 <ul>
@@ -37,16 +36,7 @@
   </li>
   <li>Must be about a bug.
     <ul>
-      <li>Suggestions must be posted on Discord in the #suggestions channel.</li>
-    </ul>
-  </li>
-</ul>
-<h2>The most common issue</h2>
-<ul>
-  <li>
-<b>TypeError: undefined is not a function</b>.
-    <ul>
-      <li>Update to Node.js 7.2.0 or higher.</li>
+      <li>Suggestions must be posted on <a href="//forum.shinobi.video">Forum</a> in the <a href="//forum.shinobi.video">Suggestions</a> section.</li>
     </ul>
   </li>
 </ul>
