--- a/web/docs/index.ejs
+++ b/web/docs/index.ejs
@@ -9,7 +9,6 @@
                 <% include blocks/branding.ejs %>
             </div><!--//container-->
         </header><!--//header-->
-        
         <section class="cards-section text-center">
             <div class="container">
                 <div id="cards-wrapper" class="cards-wrapper row">
@@ -19,7 +18,7 @@
                                 <i class="icon fa fa-bolt"></i>
                             </div><!--//icon-holder-->
                             <h3 class="title">Get Started</h3>
-                            <p class="intro">Installing Shinobi is easier than you might think.</p>
+                            <p class="intro">Installing Shinobi is easier than you might think</p>
                             <a class="link" href="start"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -29,7 +28,7 @@
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">FAQs</h3>
-                            <p class="intro">So many questions,<br> so little code.</p>
+                            <p class="intro">So many questions,<br> so little code</p>
                             <a class="link" href="faqs"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -39,68 +38,28 @@
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">API</h3>
-                            <p class="intro">Control Shinobi without Shinobi's interface.</p>
+                            <p class="intro">Control Shinobi without Shinobi's interface</p>
                             <a class="link" href="api"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-red col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-                                <span aria-hidden="true" class="icon fa fa-creative-commons"></span>
+                                <span aria-hidden="true" class="icon fa fa-camera"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Credits</h3>
-                            <p class="intro">Appreciation where it is due. License information.</p>
-                            <a class="link" href="credits"><span></span></a>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item item-pink item-2 col-md-4 col-sm-6 col-xs-6">
-                        <div class="item-inner">
-                            <div class="icon-holder">
-                                <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
-                            </div><!--//icon-holder-->
-                            <h3 class="title">Supported</h3>
-                            <p class="intro">Tested Cameras and Systems by the community.</p>
-                            <a class="link" href="supported"><span></span></a>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item item-primary col-md-4 col-sm-6 col-xs-6">
-                        <div class="item-inner">
-                            <div class="icon-holder">
-                                <span aria-hidden="true" class="icon icon_gift"></span>
-                            </div><!--//icon-holder-->
-                            <h3 class="title">Donate</h3>
-                            <p class="intro">Donating will tremendously help development.</p>
-                            <a class="link" href="donate"><span></span></a>
+                            <h3 class="title">Stream URLs</h3>
+                            <p class="intro">URLs for IP-based Streams</p>
+                            <a class="link" href="cameras"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-blue col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-                                <i class="icon fa fa-plug"></i>
+                                <span aria-hidden="true" class="icon fa fa-hdd-o"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Plugins</h3>
-                            <p class="intro">Make it better with a little butter.</p>
-                            <a class="link" href="plugins"><span></span></a>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item item-green col-md-4 col-sm-6 col-xs-6">
-                        <div class="item-inner">
-                            <div class="icon-holder">
-                                <span aria-hidden="true" class="icon fa fa-eye"></span>
-                            </div><!--//icon-holder-->
-                            <h3 class="title">Motion Detection</h3>
-                            <p class="intro">This topic is so hot it gets it's own page.</p>
-                            <a class="link" href="motion"><span></span></a>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item item-orange col-md-4 col-sm-6 col-xs-6">
-                        <div class="item-inner">
-                            <div class="icon-holder">
-                                <span aria-hidden="true" class="icon fa fa-heartbeat"></span>
-                            </div><!--//icon-holder-->
-                            <h3 class="title">Contributng</h3>
-                            <p class="intro">Bread tastes better with friends.</p>
-                            <a class="link" href="contribute"><span></span></a>
+                            <h3 class="title">Hardware Acceleration</h3>
+                            <p class="intro">More work less effort</p>
+                            <a class="link" href="gpu"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-pink col-md-4 col-sm-6 col-xs-6">
@@ -109,18 +68,8 @@
                                 <span aria-hidden="true" class="icon fa fa-wrench"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">Settings</h3>
-                            <p class="intro">Learn to Tweak your Shinobi.</p>
+                            <p class="intro">Learn to Tweak your Shinobi</p>
                             <a class="link" href="settings"><span></span></a>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item item-orange col-md-4 col-sm-6 col-xs-6">
-                        <div class="item-inner">
-                            <div class="icon-holder">
-                                <span aria-hidden="true" class="icon fa fa-camera"></span>
-                            </div><!--//icon-holder-->
-                            <h3 class="title">Camera URLs</h3>
-                            <p class="intro">Stream URLs for IP Cameras</p>
-                            <a class="link" href="cameras"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-blue col-md-4 col-sm-6 col-xs-6">
@@ -131,6 +80,66 @@
                             <h3 class="title">Object Detection</h3>
                             <p class="intro">OpenCV and License Plate Detection</p>
                             <a class="link" href="object"><span></span></a>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item item-pink item-2 col-md-4 col-sm-6 col-xs-6">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
+                            </div><!--//icon-holder-->
+                            <h3 class="title">Supported</h3>
+                            <p class="intro">Tested Cameras and Systems by the community</p>
+                            <a class="link" href="supported"><span></span></a>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item item-primary col-md-4 col-sm-6 col-xs-6">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <span aria-hidden="true" class="icon icon_gift"></span>
+                            </div><!--//icon-holder-->
+                            <h3 class="title">Donate</h3>
+                            <p class="intro">Donating will tremendously help development</p>
+                            <a class="link" href="donate"><span></span></a>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item item-green col-md-4 col-sm-6 col-xs-6">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <span aria-hidden="true" class="icon fa fa-eye"></span>
+                            </div><!--//icon-holder-->
+                            <h3 class="title">Motion Detection</h3>
+                            <p class="intro">This topic is so hot it gets it's own page</p>
+                            <a class="link" href="motion"><span></span></a>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item item-orange col-md-4 col-sm-6 col-xs-6">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <span aria-hidden="true" class="icon fa fa-heartbeat"></span>
+                            </div><!--//icon-holder-->
+                            <h3 class="title">Contributng</h3>
+                            <p class="intro">Bread tastes better with friends</p>
+                            <a class="link" href="contribute"><span></span></a>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item item-orange col-md-4 col-sm-6 col-xs-6">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <span aria-hidden="true" class="icon fa fa-creative-commons"></span>
+                            </div><!--//icon-holder-->
+                            <h3 class="title">Credits</h3>
+                            <p class="intro">Appreciation where it is due. License information</p>
+                            <a class="link" href="credits"><span></span></a>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item item-blue col-md-4 col-sm-6 col-xs-6">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <i class="icon fa fa-plug"></i>
+                            </div><!--//icon-holder-->
+                            <h3 class="title">Plugins</h3>
+                            <p class="intro">Make it better with a little butter</p>
+                            <a class="link" href="plugins"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
