--- a/web/pages/blocks/articles/footer.ejs
+++ b/web/pages/blocks/articles/footer.ejs
@@ -1,8 +1,7 @@
 <footer class="page__footer">
     <div class="page__container">
         <p class="sign-off text-center">
-            Shinobi was created by Moinul (Moe) Alam.
-            The code is licensed under <a href="https://github.com/moeiscool/Shinobi/blob/master/LICENSE">GPLv3</a>.
+            Shinobi is property of Shinobi Systems
         </p>
     </div>
 </footer>
