--- a/web/pages/why.ejs
+++ b/web/pages/why.ejs
@@ -92,6 +92,25 @@
       </table>
      </div>
   </section>
+<section id="learn8">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 text-center">
+                <h2 class="margin-top-0 text-primary">Why the name?</h2>
+                <br>
+                <img style="width:100%" src="/libs/assets/car.png">
+            </div>
+            <div class="col-lg-6 text-center">
+                <p class="large">In Short : It is a representation of warring nations that have come together to find peace rather than conflict.</p>
+<!--
+                <div class="btn-group">
+                    <a href="#learn7" class="btn btn-primary btn-xl">More about this</a>
+                </div>
+-->
+            </div>
+        </div>
+    </div>
+</section>
 <section id="learn6">
     <div class="container">
         <div class="row">
