--- a/web/pages/why.ejs
+++ b/web/pages/why.ejs
@@ -102,11 +102,9 @@
             </div>
             <div class="col-lg-6 text-center">
                 <p class="large">In Short : It is a representation of warring nations that have come together to find peace rather than conflict.</p>
-<!--
                 <div class="btn-group">
-                    <a href="#learn7" class="btn btn-primary btn-xl">More about this</a>
+                    <a href="/articles/2018-05-09-what-does-shinobi-mean" class="btn btn-primary btn-xl">More about this</a>
                 </div>
--->
             </div>
         </div>
     </div>
